objects/Rate_Term__c.object
<CustomObject>
    <fields>
        <fullName>Group_1_Amount__c</fullName>
        <label>Group 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_1_Year_2_Amount__c</fullName>
        <label>Group 1 Year 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_1_Year_3_Amount__c</fullName>
        <label>Group 1 Year 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_2_Amount__c</fullName>
        <label>Group 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_2_Year_2_Amount__c</fullName>
        <label>Group 2 Year 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_3_Amount__c</fullName>
        <label>Group 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Year_2__c</fullName>
        <label>Miscellaneous Year 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Year_3__c</fullName>
        <label>Miscellaneous Year 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Terms</relationshipLabel>
        <relationshipName>Rate_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>termNumber__c</fullName>
        <label>termNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rate Term</label>
    <nameField>
        <label>Rate Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>